# game-engines-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docsets.json  examples.md  pyproject.toml
editor-plugins/: README.md
editor-plugins/godot/: README.md
editor-plugins/godot/addons/game_engine_mcp/: console_capturer.gd  mcp_server.gd  plugin.cfg  plugin.gd
editor-plugins/godot/addons/game_engine_mcp/commands/: asset_commands.gd  code_commands.gd  commands.gd  console_commands.gd  editor_commands.gd  object_commands.gd  property_commands.gd  scene_commands.gd  screenshot_commands.gd
editor-plugins/godot/addons/game_engine_mcp/core/: command_context.gd  mcp_request.gd  mcp_response.gd  mcp_settings.gd
editor-plugins/godot/addons/game_engine_mcp/net/: client_connection.gd  tcp_transport.gd
editor-plugins/unity/: README.md  package.json
editor-plugins/unity/Editor/GameEngineMCP/: CommandRouter.cs  McpServer.cs  UnityMcpUtility.cs
editor-plugins/unreal/: README.md  unreal_server_init.py
editor-plugins/unreal/game_engine_mcp_unreal/: __init__.py  config.py  log_buffer.py  protocol.py  registry.py  server.py  ue_helpers.py  unreal_import.py
editor-plugins/unreal/game_engine_mcp_unreal/commands/: __init__.py  actors.py  assets.py  editor.py  properties.py  scene.py
scripts/: build_index.py  release_all.py  run_server.py
src/: __init__.py  bridge_config.py  config.py  crossengine.py  db.py  docsets.py  downloader.py  editor_tools.py  embedding.py  indexer.py  models.py  navigation.py  parser.py  search.py  server.py  utils.py  vecsearch.py
src/bridges/: __init__.py  base.py  godot_bridge.py  godot_commands.py  protocol.py  registry.py  unity_bridge.py  unreal_bridge.py  unreal_commands.py
src/parsers/: __init__.py  godot.py  unity.py  unreal.py
src/unity_mcp/: __init__.py  config.py  db.py  indexer.py  models.py  parser.py  search.py  server.py  utils.py
src/unity_mcp/parsers/: __init__.py  unreal.py
tests/: test_bridges.py  test_cli.py  test_new_tools.py  test_parser.py  test_search.py
(+22 files in other folders)
