[project]
name = "game-engine-mcp"
version = "0.3.0"
description = "Local MCP server for offline game engine documentation with hybrid keyword + semantic search, cross-engine translation, and structural navigation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.12",
    "fastembed>=0.4",
    "lancedb>=0.6",
    "lxml>=5.0",
    "mcp>=1.0",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
game-engine-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
